[tool.poetry]
name = "dotpyle"
version = "0.1.4"
description = "Dotpyle is a Python implementation of a dotfile system manager, allowing users to keep a secure copy of all program configurations remotely, create different profiles, etc."
authors = [
   "Jorge Bodega <jorge.bodega.f@gmail.com>",
   "Perseo Gutiérrez <perseo.gi98@gmail.com>"
]
maintainers = [
   "Jorge Bodega <jorge.bodega.f@gmail.com>",
   "Perseo Gutiérrez <perseo.gi98@gmail.com>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jorgebodega/dotpyle"
repository = "https://github.com/jorgebodega/dotpyle"

[tool.poetry.dependencies]
python = "^3.9"
GitPython = "^3.1.24"
Cerberus = "^1.3.2"
PyYAML = "^5.4.1"
rich = "^12.0.0"
click = "^8.0.1"
setuptools = "^62.0.0"
dictdiffer = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^20.8b1"
coveralls = "^3.0.1"
pylint = "^2.6.0"
pep8 = "^1.7.1"
pre-commit = "^2.9.3"
pytest-cov = "^3.0.0"
poethepoet = "^0.13.0"
pytest-print = "^0.3.0"
debugpy = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dotpyle = "dotpyle.main:main"
test = "pytest:main"

[tool.poe.tasks]
black = "black ."
black-check = "black --check --quiet ."
clear-cache = "rm -rf **/__pycache__/**"
cov-report = "coverage report -m"
pylint = "pylint dotpyle/ tests/"
test = "pytest"
test-cov = "coverage run --source=dotpyle -m pytest"

[tool.black]
line-length = 80
experimental-string-processing = true
target-version = ['py36', 'py37', 'py38']
exclude = '''
/(
  | \.git
  | \.venv
  | buck-out
  | build
  | dist
)/
'''
verbose = true
